# efu-legacy-modules

./: CMakeLists.txt  LICENSE  README.md
adc_readout/test/: CMakeLists.txt
gdgem/: CMakeLists.txt  GdGem.cpp  GdGemBase.cpp  GdGemBase.h  GdGemBaseTest.cpp  GdGemConfigTest.cpp  main.cpp
gdgem/generators/: CMakeLists.txt
gdgem/srs/: CMakeLists.txt
gdgem/tests/: CMakeLists.txt
jalousie/: CMakeLists.txt  Jalousie.cpp  JalousieBase.cpp  JalousieBase.h  main.cpp
jalousie/test/: CMakeLists.txt  JalousieBaseTest.cpp
multiblade/: CMakeLists.txt  Counters.h  MBCaen.cpp  MBCaenBase.cpp  MBCaenBase.h  MBCaenBaseTest.cpp  MBCaenInstrument.cpp  MBCaenInstrument.h  MBCaenInstrumentTest.cpp  main.cpp
multiblade/caen/: AMORGeometry.h  AMORGeometryTest.cpp  CMakeLists.txt  Config.cpp  Config.h  ConfigTestData.h  DataParser.cpp  DataParser.h  DigitizerMapping.h  DigitizerMappingTest.cpp
multiblade/clustering/: EventBuilder.h
multiblade/configs/: AmorB.json
multigrid/reduction/: CMakeLists.txt
multigrid/reduction/test/: CMakeLists.txt  ModuleGeometryTest.cpp
sonde/: CMakeLists.txt  SoNDeBase.cpp  SoNDeBase.h  SoNDeBaseTest.cpp  main.cpp
